syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.movie_service";
option java_outer_classname = "RecommendationProto";

service RecommendationService {
  rpc GetRecommendations (RecommendationRequest) returns (RecommendationResponse);
}

message RecommendationRequest {
  int64 user_id = 1;
  int32 limit = 2;   // e.g. top N
  int32 offset = 3;  // paging offset
}

message Recommendation {
  int64 user_id = 1;
  int64 movie_id = 2;
  double weighted_sum_total = 3;
  double weight_total = 4;
}

message RecommendationResponse {
  repeated Recommendation recommendations = 1;
  int32 count = 2; // returned count
}
